tests/code/pages/errors/-index.tht

fun main {

    $files = dir'app:/code/pages/errors'.readDir()

    $page = Page.create({
        title: 'THT Error Pages'
        css: url'/css/basic.css'
        main: html($files)
    })

    Output.sendPage($page)
}


tem html($files) {

    <h1> Error Test Pages

    <ul>
    --- foreach $files as $f {
    <li> <a href="{{ $f.toUrl() }}">{{ $f.toUrl() }}
    --- }
    </ul>
}


